Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -923,7 +923,7 @@
     "library": "Biblioteca",
     "license": "Licencia",
     "like-than": "Igual que",
-    "limits": "Límites",
+    "limits": "Limity",
     "line": "Línea",
     "lines": "Lineas",
     "linux": "Linux",
@@ -1536,7 +1536,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
-    "successive-tract": "successive-tract",
+    "successive-tract": "následná trasa",
     "sum": "Součet",
     "sum-netos-line-tax-must-be": "La suma de los netos de las líneas de IVA debería ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma de los totales de iva de las líneas de IVA debería ser: %lineTotalTax%",
@@ -1681,7 +1681,7 @@
     "unlink-install-ok": "Instalace byla úspěšně odebrána záznamu.",
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
-    "unsafe-file": "Nesecure soubor",
+    "unsafe-file": "Nepodporovaný soubor",
     "unsafe-file-p": "Z bezpečnostních důvodů bráníme stahování některých typů souborů, jako je tento: %file%",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
