--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -895,7 +895,7 @@
     "last-activity": "Letzte Aktivität",
     "last-bimester": "Letztes Bimester",
     "last-block": "Letzter Bolck",
-    "last-duration": "Última duración",
+    "last-duration": "Letzte Dauer",
     "last-ip": "Letzte IP",
     "last-month": "Letzter Monat",
     "last-price-estimation": "Letzte Preisabschätzung",
