--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -631,7 +631,7 @@
     "export-bill": "fattura di esportazione",
     "extra-file": "File aggiuntivo",
     "failed": "Fallito",
-    "fails": "Fallos",
+    "fails": "Fallimenti",
     "families": "famiglie",
     "family": "Famiglia",
     "family-code": "Codice famiglia",
