--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -822,8 +822,8 @@
     "invalid-iso-code": "Nieprawidłowy kod ISO '%iso-code%'",
     "invalid-number": "Nieprawidłowy numer: %number%",
     "invalid-request": "Nieprawidłowe żądanie",
-    "invalid-token": "Token nie jest ważny",
-    "invalid-token-p": "Token dostępu do pliku %file% jest nieprawidłowy lub wygasł",
+    "invalid-token": "Token jest nieprawidłowy",
+    "invalid-token-p": "Token dostępu do pliku %file% jest nieważny lub wygasł",
     "invalid-user-can-permission": "Nieprawidłowe uprawnienie: %permission%. Dostępne uprawnienia to: dostęp, usuwanie, eksport, import, aktualizacja i tylko-dane-właściciela.",
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
     "invoice": "Faktura",
@@ -895,7 +895,7 @@
     "last-activity": "Ostatnia aktywność",
     "last-bimester": "Ostatni bimestre",
     "last-block": "Ostatni blok",
-    "last-duration": "Última duración",
+    "last-duration": "Ostatni czas",
     "last-ip": "Ostatni adres IP",
     "last-month": "W zeszłym miesiącu",
     "last-price-estimation": "Ostatnia szacunkowa cena",
@@ -1064,7 +1064,7 @@
     "next": "Następny",
     "nick": "Nick",
     "no": "Nie",
-    "no-admin": "No administrador",
+    "no-admin": "Brak administratora",
     "no-data": "Brak danych",
     "no-data-received-form": "Nie otrzymano danych z formularza",
     "no-document-selected": "Nie wybrano żadnego dokumentu",
