--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1126,7 +1126,7 @@
     "opened": "Aberto",
     "opening-acounting-completed": "Abertura de exercício correta",
     "opening-operation": "Abertura",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Sistema Operacional",
     "operation": "Operação",
     "operation-export": "Operação de exportação",
     "operator": "Operador",
@@ -1230,7 +1230,7 @@
     "plugin-update": "a",
     "plugins": "Plugins",
     "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
-    "plugins-required": "Plugins requeridos",
+    "plugins-required": "Plugins necessários",
     "points": "Pontos",
     "points-of-interest": "Pontos de interesse",
     "port": "Porto",
@@ -1766,7 +1766,7 @@
     "wizard": "Assistente",
     "wizard-p": "Preencha este formulário sobre o seu negócio para concluir a configuração.",
     "wizard-plugins": "O assistente de plugins",
-    "work-certification": "Certificación",
+    "work-certification": "Certificação",
     "work-events": "Eventos de trabalho",
     "working-hours": "Horário de trabalho",
     "works": "Trabalhos",
