--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1445,7 +1445,7 @@
     "serierb": "Série RB",
     "series": "Séries",
     "server": "Servidor",
-    "server-accepts-filesize": "Tamaño máx. subida archivos",
+    "server-accepts-filesize": "Tamanho máx. subida de arquivos",
     "server-software": "Software do servidor",
     "service": "Serviço",
     "services": "Serviços",
