--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -822,7 +822,7 @@
     "invalid-iso-code": "Neplatný kód ISO ''%iso-code%",
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Neplatný token",
     "invalid-token-p": "Token přístupu pro soubor %file% není platný nebo vypršel.",
     "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
     "invalid-web": "Dirección web no válida: %web%",
