--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -92,7 +92,7 @@
     "allow-sale-without-stock": "Baimendu stock gabeko salmenta",
     "allow-sale-without-stock-n": "Produktu berriak stockik gabe saltzea baimendu",
     "allow-update": "Onartu eguneratzea",
-    "already-installed": "Ya instalado",
+    "already-installed": "Bada instalado",
     "already-installed-p": "Programa jadanik instalatuta dago",
     "always-to-company-email": "Beti enpresaren posta elektronikora",
     "amount": "Zenbatekoa",
