--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -822,7 +822,7 @@
     "invalid-iso-code": "Codice ISO '%iso-code%' non valido",
     "invalid-number": "Numero non valido: %number%",
     "invalid-request": "Richiesta non valida",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Token non valido",
     "invalid-token-p": "Il token di accesso per il file %file% non è valido o è scaduto",
     "invalid-user-can-permission": "Permesso non valido: %permission%. I permessi disponibili sono access, delete, export, import, update e only-owner-data.",
     "invalid-web": "Indirizzo web non valido: %web%",
@@ -1088,7 +1088,7 @@
     "not-enough-stock": "Non abbastanza stock di %reference%",
     "not-passed-integrity-check": "Alcuni file non hanno superato il controllo di integrità...<br\/>Puoi <a class='alert-link' target='_blank' href='IntegritySystemCheck'>ottenere ulteriori dettagli qui<\/a>.",
     "not-public": "Non pubblico",
-    "not-registered": "No registrada",
+    "not-registered": "Non registrata",
     "not-sent": "Non spedito",
     "not-stored-content": "Contenuto non memorizzato",
     "not-valid-email": "Email non valida %email%",
