--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -593,7 +593,7 @@
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
-    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
+    "es-tax-regime-one-stop-shop-oss": "es-regime-podatkowy-jednolity-OSS",
     "es-tax-regime-simplified": "Reżim uproszczony",
     "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
     "es-tax-regime-special-small-business": "es-tax-regime-special-small-business",
@@ -923,7 +923,7 @@
     "library": "Biblioteka",
     "license": "Licencja",
     "like-than": "Tak jak",
-    "limits": "Límites",
+    "limits": "Granice",
     "line": "Linia",
     "lines": "Linie",
     "linux": "Linux",
@@ -1681,7 +1681,7 @@
     "unlink-install-ok": "Instalacja została pomyślnie usunięta z rejestru.",
     "unlock-entry": "Odblokować",
     "unpaid": "Nieopłacone",
-    "unsafe-file": "Archivo no seguro",
+    "unsafe-file": "Niebezpieczny plik",
     "unsafe-file-p": "Z powodów bezpieczeństwa uniemożliwiamy pobieranie niektórych typów plików, takich jak ten: %file%",
     "until-accounting-entry": "Do wpisu księgowego",
     "until-date": "Do",
