--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -895,7 +895,7 @@
     "last-activity": "Última atividade",
     "last-bimester": "O bimestre passado",
     "last-block": "Último bloco",
-    "last-duration": "Última duración",
+    "last-duration": "Última duração",
     "last-ip": "Último IP",
     "last-month": "O último mês",
     "last-price-estimation": "Último preço de orçamento",
@@ -1682,7 +1682,7 @@
     "unlock-entry": "Desbloquear",
     "unpaid": "Não pago",
     "unsafe-file": "Arquivo não seguro",
-    "unsafe-file-p": "Por motivos de seguridad impedimos las descargas de algunos tipos de archivos, como este: %file%",
+    "unsafe-file-p": "Por motivos de segurança, impedimos o download de alguns tipos de arquivos, como este: %file%",
     "until-accounting-entry": "Até entrada contábil",
     "until-date": "Até a data",
     "until-subaccount": "até a subconta",
