Actualizadas las traducciones.

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1651,7 +1651,7 @@
     "two-factor-auth": "Autenticación en dous pasos",
     "two-factor-auth-disable": "Desactivar a autenticación en 2 pasos",
     "two-factor-auth-disabled": "Autenticación en 2 pasos desactivada",
-    "two-factor-auth-enable": "Activar autenticación en 2 pasos",
+    "two-factor-auth-enable": "Activar a autenticación en 2 pasos",
     "two-factor-auth-enabled": "Autenticación en 2 pasos activada",
     "two-factor-auth-p": "Configura a app Google Authenticator usando o QR, introduce aquí o código e pulsa verificar para completar o proceso de activación.",
     "two-factor-code": "Código de dobre factor",
@@ -1682,7 +1682,7 @@
     "unlock-entry": "Desbloquear",
     "unpaid": "Impagado",
     "unsafe-file": "Arquivo non seguro",
-    "unsafe-file-p": "Por motivos de seguridade impedimos as descargas dalgúns tipos de arquivos, como este: %file%",
+    "unsafe-file-p": "Por motivos de seguridade impedimos as descargas dalgunhas clases de arquivos, como este: %file%",
     "until-accounting-entry": "Ata asento",
     "until-date": "Ata (data)",
     "until-subaccount": "Ata subconta",
