--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -822,7 +822,7 @@
     "invalid-iso-code": "Código ISO '%iso-code%' no vàlid",
     "invalid-number": "invalid-number",
     "invalid-request": "Petició no vàlida",
-    "invalid-token": "Token no válido",
+    "invalid-token": "Token no vàlid",
     "invalid-token-p": "El token d'accés per al fitxer %file% no és vàlid o ha caducat",
     "invalid-user-can-permission": "Permís no vàlid: %permission%. Els permisos disponibles són access, delete, export, import, update i only-owner-data.",
     "invalid-web": "Adreça web no vàlida",
