Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -583,7 +583,7 @@
     "es-tax-exception-e4": "Spain: exception by article 23 and 24 of the VAT Law",
     "es-tax-exception-e5": "Spain: exception by article 25 of the VAT Law",
     "es-tax-exception-e6": "Spain: exception for another reason",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
+    "es-tax-exception-location-rules": "es-tax-exception-location-rules.",
     "es-tax-exception-passive-subject": "Tax exception for passive subject",
     "es-tax-regime-agrarian": "Special regime for agriculture, livestock and fisheries",
     "es-tax-regime-cash-criteria": "Cash criteria",
@@ -592,7 +592,7 @@
     "es-tax-regime-general": "General Regime",
     "es-tax-regime-gold": "Special regime for investment gold",
     "es-tax-regime-group-entities": "Special regime of the group of entities",
-    "es-tax-regime-one-stop-shop-ioss": "IOSS One Stop Shop tax regime",
+    "es-tax-regime-one-stop-shop-ioss": "IOSS One Stop Shop tax regime.",
     "es-tax-regime-one-stop-shop-oss": "OSS One Stop Shop tax regime.",
     "es-tax-regime-simplified": "Simplified Regime",
     "es-tax-regime-special-retail-traders": "Special retail traders tax regime",
@@ -631,7 +631,7 @@
     "export-bill": "export-bill",
     "extra-file": "Extra file",
     "failed": "Failed",
-    "fails": "Failures",
+    "fails": "Failures.",
     "families": "Families",
     "family": "Family",
     "family-code": "Family code",
@@ -923,7 +923,7 @@
     "library": "Library",
     "license": "License",
     "like-than": "Like than",
-    "limits": "Limits",
+    "limits": "Limits.",
     "line": "Line",
     "lines": "Lines",
     "linux": "Linux",
@@ -1126,7 +1126,7 @@
     "opened": "Opened",
     "opening-acounting-completed": "Opening acounting completed",
     "opening-operation": "Opening",
-    "operating-system": "Operating System",
+    "operating-system": "Operating System.",
     "operation": "Operation",
     "operation-export": "Export Operation",
     "operator": "Operator",
@@ -1446,7 +1446,7 @@
     "series": "Series",
     "server": "Server",
     "server-accepts-filesize": "Max file upload size.",
-    "server-software": "Server Software",
+    "server-software": "Server Software.",
     "service": "Service",
     "services": "Services",
     "settings": "Settings",
@@ -1766,7 +1766,7 @@
     "wizard": "Wizard",
     "wizard-p": "Fill out this form about your business to finish the configuration.",
     "wizard-plugins": "A plugin adds functionality. Select the plugins you want to activate immediately, or you can do it later from the control panel.",
-    "work-certification": "Certification",
+    "work-certification": "Certification.",
     "work-events": "Working events",
     "working-hours": "Work schedule",
     "works": "Works",
