--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -895,7 +895,7 @@
     "last-activity": "Ostatnia aktywność",
     "last-bimester": "Ostatni bimestre",
     "last-block": "Ostatni blok",
-    "last-duration": "Ostatni czas",
+    "last-duration": "Ostatni czas trwania",
     "last-ip": "Ostatni adres IP",
     "last-month": "W zeszłym miesiącu",
     "last-price-estimation": "Ostatnia szacunkowa cena",
@@ -1002,7 +1002,7 @@
     "method-payment": "Metoda płatności",
     "mime-type": "Typ MIME",
     "min-fs-version": "Minimalna wersja Core",
-    "min-php-version": "Min. v. PHP",
+    "min-php-version": "Min. wersja PHP",
     "minimum-amount-with-cifnif": "Minimalna kwota z CIF\/NIF",
     "minimum-amount-without-cifnif": "Minimalna kwota bez CIF\/NIF",
     "minimum-stock": "Minimalny zapas",
