Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -229,7 +229,7 @@
     "center": "Centro",
     "certificate": "Certifikát",
     "change": "Cambiar",
-    "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
+    "change-password-online-warning": "Pokud bude tato instalace online, měla by být heslo změněno na bezpečnější.",
     "channel": "Canal",
     "charge-date": "Fecha cargo",
     "chart": "Gráfico",
@@ -550,7 +550,7 @@
     "end-date": "Fecha de fin",
     "end-month": "Konec měsíce",
     "end-time": "Hora finalización",
-    "environment": "Entorno",
+    "environment": "Prostředí",
     "epigraph": "Epígrafe",
     "epigraph-group": "Grupo de Epígrafe",
     "epigraphs": "Epígrafes",
