--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -576,7 +576,7 @@
     "errors": "Mistakes",
     "es_EC": "Spanish (Ecuador)",
     "es-tax-exception-art-14": "Tax exception art. 14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
+    "es-tax-exception-art-7": "Tax exception art. 7",
     "es-tax-exception-e1": "Spain: exception by article 20 of the VAT Law",
     "es-tax-exception-e2": "Spain: exception by article 21 of the VAT Law",
     "es-tax-exception-e3": "Spain: exception by article 22 of the VAT Law",
