--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1077,7 +1077,7 @@
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem controle de estoque",
-    "no-updates-now": "Não há atualizações no momento",
+    "no-updates-now": "Não há atualizações neste momento",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
@@ -1386,7 +1386,7 @@
     "roles": "Funções",
     "rules": "Regras",
     "run": "executar",
-    "running": "Ejecutando",
+    "running": "Executando",
     "running-plugin-cron": "Executando o cron do plugin %pluginName%",
     "running-work-queue": "Executando a fila de eventos de trabalho",
     "sales": "Vendas",
