--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1077,7 +1077,7 @@
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem stock",
-    "no-updates-now": "No hay actualizaciones en este momento",
+    "no-updates-now": "Não há atualizações neste momento",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Documento não editável",
