--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -1440,6 +1440,7 @@
     "sequences": "Secuencias",
     "serial-number": "Número de Serie",
     "serie": "Serie",
+    "serie-not-found": "Serie %serie% no encontrada",
     "serieb": "Serie B",
     "serier": "Serie R",
     "serierb": "Serie RB",
