lang: traducciones campo total pendiente

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1188,6 +1188,7 @@
     "pending-invoices-button": "Risk:",
     "pending-orders-button": "Pending orders:",
     "pending-reception": "Pending reception",
+    "pending-total": "Total pending",
     "percentage": "Percentage",
     "percentage-commission": "% Commission",
     "percentage-discount": "% Discount",
