--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -1188,6 +1188,7 @@
     "pending-invoices-button": "Fact. Ptes:",
     "pending-orders-button": "Ped. Ptes:",
     "pending-reception": "Pendiente recepción",
+    "pending-total": "Total pendiente",
     "percentage": "Porcentaje",
     "percentage-commission": "% Comisión",
     "percentage-discount": "% Dto.",
