Refactor dotAccountingAction to use Where class and improve variable naming; update translations in JSON files

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -631,7 +631,7 @@
     "export-bill": "Factura de exportación",
     "extra-file": "Archivo extra",
     "failed": "Selhalo",
-    "fails": "Fallos",
+    "fails": "Chyby",
     "families": "Familias",
     "family": "Familia",
     "family-code": "Código de la família",
