--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -631,7 +631,7 @@
     "export-bill": "Exportationsrechnung",
     "extra-file": "Extra Datei",
     "failed": "Fehlgeschlagen",
-    "fails": "Fallos",
+    "fails": "Fehler",
     "families": "Familien",
     "family": "Familie",
     "family-code": "Familiencode",
@@ -1126,7 +1126,7 @@
     "opened": "Geöffnet",
     "opening-acounting-completed": "Buchhaltungseröffnung abgeschlossen",
     "opening-operation": "Öffnung",
-    "operating-system": "Sistema Operativo",
+    "operating-system": "Betriebssystem",
     "operation": "Operation",
     "operation-export": "Betrieb Export",
     "operator": "Bediener",
