--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -584,7 +584,7 @@
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-passive-subject": "exceção de imposto - sujeito passivo",
+    "es-tax-exception-passive-subject": "Exceção fiscal - sujeito passivo",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
     "es-tax-regime-especial-agp": "Regime especial da agricultura, pecuária e pesca",
