Add translation for "charge" in multiple language files

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -231,6 +231,7 @@
     "change": "Canviar",
     "change-password-online-warning": "Si aquesta instal·lació estarà en línia, hauria de canviar la contrasenya per una de més segura.",
     "channel": "Canal",
+    "charge": "Cobrar",
     "charge-date": "Data càrrec",
     "chart": "Gràfic",
     "charts": "Gràfiques",
