--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -161,7 +161,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Staňte se sponzorem",
-    "benefit-3-parties": "benefit-3-parties",
+    "benefit-3-parties": "Výhoda třetích stran",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
@@ -231,6 +231,7 @@
     "change": "Cambiar",
     "change-password-online-warning": "Pokud bude tato instalace online, měla by být heslo změněno na bezpečnější.",
     "channel": "Canal",
+    "charge": "Cobrar",
     "charge-date": "Fecha cargo",
     "chart": "Gráfico",
     "charts": "Gráficos",
