--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -231,6 +231,7 @@
     "change": "Veränderung",
     "change-password-online-warning": "Wenn dieses System online sein soll, sollten Sie das Passwort durch ein sicheres ersetzen.",
     "channel": "Kanal",
+    "charge": "Aufladen",
     "charge-date": "Belastungsdatum",
     "chart": "Grafik",
     "charts": "Grafiken",
