--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -231,6 +231,7 @@
     "change": "Change",
     "change-password-online-warning": "If this installation is going to be online, you should change the password to a more secure one.",
     "channel": "Channel",
+    "charge": "Charge",
     "charge-date": "Charge date",
     "chart": "Chart",
     "charts": "Charts",
