--- a/Core/Translation/es_UY.json
+++ b/Core/Translation/es_UY.json
@@ -231,6 +231,7 @@
     "change": "Cambiar.",
     "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Canal.",
+    "charge": "Cobrar",
     "charge-date": "Fecha cargo",
     "chart": "Gráfico",
     "charts": "Gráficos",
