--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -231,6 +231,7 @@
     "change": "Aldatu",
     "change-password-online-warning": "Instalazio hau online egongo bada, pasahitza seguruago batez aldatu beharko litzateke.",
     "channel": "Kanala",
+    "charge": "Kobratu",
     "charge-date": "Kobratzeko data",
     "chart": "Grafikoa",
     "charts": "Irudikapenak",
