--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -231,6 +231,7 @@
     "change": "Changer",
     "change-password-online-warning": "Si cette installation va être en ligne, vous devriez changer le mot de passe pour un plus sécurisé.",
     "channel": "canal",
+    "charge": "Cobrar",
     "charge-date": "Date de facturation",
     "chart": "Graphique",
     "charts": "Graphiques",
