--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -231,6 +231,7 @@
     "change": "Cambiar",
     "change-password-online-warning": "Se esta instalación vai estar online, debería mudar o contrasinal por un máis seguro.",
     "channel": "Canal",
+    "charge": "Cobrar",
     "charge-date": "Data cargo",
     "chart": "Gráfico",
     "charts": "Gráficos",
@@ -1696,7 +1697,7 @@
     "updates-available": "Actualizacións dispoñibles",
     "updates-available-p": "Hai actualizacións dispoñibles de FacturaScripts. Por favor, fai clic no actualizador e descarga a nova versión. As actualizacións corrixen fallos e engaden novas funcionalidades.",
     "updates-beta-warning": "Actualizacións beta activadas",
-    "updates-beta-warning-p": "⚠️ Ten activadas as actualizacións beta. Estas actualizacións non foron probadas e só se recomiendan en instalacións de proba.",
+    "updates-beta-warning-p": "⚠️ Ten activadas as actualizacións beta. Estas actualizacións non foron probadas e só se recomendan en instalacións de proba.",
     "updating-attached-relations": "Actualizando contadores de arquivos adxuntos",
     "upload-file": "Subir ficheiro",
     "uploaded-at": "Cargado en",
