--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -231,6 +231,7 @@
     "change": "cambiamento",
     "change-password-online-warning": "Se questa installazione sarà online, dovrebbe cambiare la password con una più sicura.",
     "channel": "canale",
+    "charge": "Caricare",
     "charge-date": "Data del addebito",
     "chart": "Grafico",
     "charts": "grafici",
