--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -231,6 +231,7 @@
     "change": "Zmień",
     "change-password-online-warning": "Jeśli ta instalacja ma być online, powinieneś zmienić hasło na bardziej bezpieczne.",
     "channel": "Kanał",
+    "charge": "Pobierać",
     "charge-date": "Data obciążenia",
     "chart": "Wykres",
     "charts": "Wykresy",
@@ -1388,7 +1389,7 @@
     "run": "Uruchom",
     "running": "Ejecutando",
     "running-plugin-cron": "Uruchamianie cron wtyczki %pluginName%",
-    "running-work-queue": "Uruchamianie kolejki zadań roboczych",
+    "running-work-queue": "Uruchamianie kolejki zadań",
     "sales": "Sprzedaż",
     "sales-invoice": "Faktura sprzedaży",
     "sales-rate": "Wskaźnik sprzedaży",
