--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -231,6 +231,7 @@
     "change": "mudança",
     "change-password-online-warning": "Si esta instalación va a estar online, debería cambiar la contraseña por una más segura.",
     "channel": "Canal",
+    "charge": "Cobrar",
     "charge-date": "Data de cobrança",
     "chart": "Gráfico",
     "charts": "gráficos",
