--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -231,6 +231,7 @@
     "change": "Canviar",
     "change-password-online-warning": "Si esta instal·lació va a estar online, hauria de canviar la contrasenya per una més segura.",
     "channel": "Canal",
+    "charge": "Cobrar",
     "charge-date": "Data de càrrec",
     "chart": "Gràfic",
     "charts": "Gràfiques",
