--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -585,7 +585,7 @@
     "es-tax-exception-e5": "Hiszpania: wyjątek na podstawie artykułu 25 ustawy o VAT",
     "es-tax-exception-e6": "Hiszpania: wyjątek z innej przyczyny",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-passive-subject": "Wyjątek podatkowy (podmiot bierny)",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Rolnictwo, hodowla zwierząt i rybołówstwo",
