Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -576,7 +576,7 @@
     "error-write-cert": "Chyba při zapisování certifikátu",
     "errors": "Errores",
     "es_EC": "Španělština (Ekvádor)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
+    "es-tax-exception-art-14": "Daňová výjimka (čl. 14)",
     "es-tax-exception-art-7": "es-tax-exception-art-7",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
@@ -596,7 +596,7 @@
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Régimen simplificado",
-    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-retail-traders": "Zvláštní daňový režim pro maloobchodníky",
     "es-tax-regime-special-small-business": "Zvláštní daňový režim pro malé podniky",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
     "es-tax-regime-telecom": "Zvláštní režimy vztahující se na telekomunikační služby, vysílání nebo televizi a služby poskytované elektronickou cestou",
