--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -292,7 +292,7 @@
     "companies": "Enpresak",
     "company": "Enpresa",
     "company-commission-info": "Aukeratutako enpresari bakarrik aplikatuko zaio",
-    "company-iban-changed": "%account% banku kontuaren iban-a aldatu da. Lehen %old% zen eta orain %new% da.",
+    "company-iban-changed": "%account% banku kontuaren IBAN-a aldatu da. Lehen %old% zen eta orain %new% da.",
     "company-manager": "Enpresa kudeatzailea",
     "company-name": "Enpresaren izena",
     "company-tax": "Sozialen gaineko zerga",
@@ -931,7 +931,7 @@
     "list": "Zerrenda",
     "load-def-acc-plan": "Kargatu kotabilitate plan lehenetsia",
     "loading-controller": "'%controllerName%' kontrolatzailea kargatzen",
-    "local-business-rental": "Lokalak alokatu",
+    "local-business-rental": "Lokal-alokairua",
     "location": "Kokapena",
     "lock-accounting": "Kontabilitatea blokeatu",
     "lock-entry": "Idazpena blokeatu",
