--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1050,7 +1050,7 @@
     "nature": "Natura",
     "need-help-password": "Potrzebujesz pomocy z hasłem?",
     "negative-balance": "Saldo ujemne",
-    "net": "Neto",
+    "net": "Netto",
     "new": "Nowy",
     "new-acc-entry-line-p": "Wprowadzisz linię, wpisując poniżej kod podkonta lub naciskając przycisk podkonta i wybierając podkonto.",
     "new-address": "Nowy adres",
