--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -596,7 +596,7 @@
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
-    "es-tax-regime-special-retail-traders": "es-tax-regime-special-retail-traders",
+    "es-tax-regime-special-retail-traders": "regime fiscal especial para comerciantes varejistas",
     "es-tax-regime-special-small-business": "regime-fiscal-es-pequeno-negócio",
     "es-tax-regime-surcharge": "Sobretaxa de equivalência",
     "es-tax-regime-telecom": "Regimes especiais aplicáveis aos serviços de telecomunicações, de radiodifusão ou de televisão e aos prestados por via eletrônica",
