--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -576,16 +576,16 @@
     "error-write-cert": "Error al escribir el certificado",
     "errors": "Errores",
     "es_EC": "Español (Ecuador)",
-    "es-tax-exception-art-14": "es-tax-exception-art-14",
-    "es-tax-exception-art-7": "es-tax-exception-art-7",
-    "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
-    "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
-    "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
-    "es-tax-exception-e4": "España: excepción por el artículo 23 y 24 de la Ley del IVA",
-    "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
-    "es-tax-exception-e6": "España: excepción por otra causa",
-    "es-tax-exception-location-rules": "es-tax-exception-location-rules",
-    "es-tax-exception-passive-subject": "es-tax-exception-passive-subject",
+    "es-tax-exception-art-14": "España: N4 No sujeta art. 14 LIVA – Operaciones vinculadas a exportaciones",
+    "es-tax-exception-art-7": "España: N3 No sujeta art. 7 LIVA – Operaciones no sujetas (aportaciones, transmisión de UEA, muestras…)",
+    "es-tax-exception-e1": "España: excepción por el artículo 20 LIVA – Exenciones interiores (sanidad, enseñanza, seguros, financieros…)",
+    "es-tax-exception-e2": "España: excepción por el artículo 21 LIVA – Exportaciones a países terceros",
+    "es-tax-exception-e3": "España: excepción por el artículo 22 LIVA - Operaciones asimiladas a exportaciones",
+    "es-tax-exception-e4": "España: excepción por el artículo 23-24 LIVA – Zonas francas y depósitos aduaneros",
+    "es-tax-exception-e5": "España: excepción por el artículo 25 LIVA Entregas intracomunitarias de bienes",
+    "es-tax-exception-e6": "España: otras exenciones (oro de inversión, regímenes especiales, etc.)",
+    "es-tax-exception-location-rules": "España: N2 No sujeta – Reglas de localización de servicios (arts. 69–70 LIVA, servicios B2B UE o fuera UE)",
+    "es-tax-exception-passive-subject": "España: N6 Inversión del sujeto pasivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
     "es-tax-regime-especial-agp": "Agricultura, ganadería y pesca",
